# dungeon-masters-guide

./: .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  communications.md  creator-kit.md  ethics.md  getting-started.md  mkdocs.yml  philosophy.md  premise.md  pyproject.toml  story-continuity-checker-prompt.md  storytelling.md  technical-suggestions.md
.github/workflows/: publish.yml  spike-content-type.yml
.kittify/: agent_profiles_manifest.json  canonical-events.jsonl  command-skills-manifest.json  config.yaml  metadata.yaml
.kittify/charter/: charter.md  references.yaml
.kittify/charter/interview/: answers.yaml
doc/: build.md  follow-ups.md  index.md
doc/prompts/: README.md
kitty-specs/guide-site-build-01KXP76R/: acceptance-matrix.json  analysis-report.md  data-model.md  lanes.json  meta.json  plan.md  quickstart.md  research.md  spec.md  status.events.jsonl  status.json  tasks.md
kitty-specs/guide-site-build-01KXP76R/checklists/: requirements.md
kitty-specs/guide-site-build-01KXP76R/contracts/: llms-txt.md  pack-branch.md  roles-declaration.md  url-map.md
kitty-specs/guide-site-build-01KXP76R/decisions/: DM-01KXP7BCG6XFDHDRGZ57NXG90Q.md  index.json
kitty-specs/guide-site-build-01KXP76R/tasks/: README.md  WP01-prove-machine-surface.md  WP02-foundation-and-roles.md  WP03-browsable-site.md  WP04-book-and-pdf.md  WP05-machine-sources.md  WP06-pack-branch.md  WP07-link-integrity.md  WP08-continuous-publication.md  WP09-behavioural-acceptance.md
spike/: FINDINGS.md  index.html  probe.txt
src/pack/: README.md  communications.md  creator-kit.md  ethics.md  getting-started.md  improvisation.md  philosophy.md  premise.md  start.md  story-continuity-checker-prompt.md  storytelling.md  technical-suggestions.md  worked-example.md
src/theme/: .gitkeep  sitemap.xsl
src/theme/book/: book.css  template.tex
src/theme/book/fonts/: README.md
tests/: __init__.py  conftest.py  test_book.py  test_links.py  test_llms.py  test_packbranch.py  test_provenance.py  test_rename.py  test_roles.py  test_site.py  test_toolchain.py
(+10 files in other folders)
